--- a/src/pages/contact.scss
+++ b/src/pages/contact.scss
@@ -77,7 +77,7 @@
 }
 
 .contactSectionCopy {
-  color: rgba(38, 70, 83, 0.74);
+  color: rgba(38, 70, 83, 0.82);
   line-height: 1.6;
   margin-bottom: 1rem !important;
 }
@@ -121,7 +121,7 @@
 }
 
 .contactLinkCard small {
-  color: rgba(38, 70, 83, 0.72);
+  color: rgba(38, 70, 83, 0.86);
   font-size: 0.84rem;
 }
 
