--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -7,7 +7,7 @@
 }
 
 .homeSectionEyebrow {
-  color: #227c71;
+  color: #1b665d;
   font-size: 0.82rem;
   font-weight: 700;
   letter-spacing: 0.08em;
@@ -21,7 +21,7 @@
 }
 
 .homeSectionIntro {
-  color: #5c6f7d;
+  color: #425866;
   font-size: 1rem;
   line-height: 1.7;
 }
@@ -101,7 +101,7 @@
 }
 
 .homeAboutText {
-  color: #5c6f7d;
+  color: #425866;
   font-size: 1rem;
   line-height: 1.7;
   margin: 0;
@@ -152,7 +152,7 @@
 }
 
 .homeProjectMeta {
-  color: #227c71;
+  color: #1b665d;
   font-size: 0.78rem;
   font-weight: 700;
   letter-spacing: 0.08em;
@@ -168,13 +168,13 @@
 }
 
 .homeProjectDescription {
-  color: #5c6f7d;
+  color: #425866;
   line-height: 1.65;
   margin: 0;
 }
 
 .homeProjectLink {
-  color: #227c71;
+  color: #1b665d;
   font-size: 0.92rem;
   font-weight: 600;
   margin-top: auto;
